# Hegex

./: .gitignore  Hegex.cabal  README.md
src/: Hegex.hs  Main.hs  Multiple7Matcher.hs  gen.py
src/Hegex/: DFA.hs  NFA.hs  Tree.hs  Type.hs
test/: SpecHelper.hs
test/Hegex/: DFASpec.hs  NFASpec.hs  TreeSpec.hs
